--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,30 @@ main {
     margin: 10px;
 }
 
+/*--------- Eight Ball Page ---------*/
+
+.eight-ball-image {
+    margin-top: 40px;
+}
+
+#eight-ball-question-box {
+
+}
+
+.eight-ball-submit-button {
+    background-color: #3d0c11;
+    border-color: #3d0c11;
+    font-family: "lemon", "oswald", sans-serif;
+    color: #f9dec9;
+}
+
+.eight-ball-answer {
+    font-family: "lemon", "oswald", sans-serif;
+    color: #f9dec9;
+    text-align: center;
+    margin-top: 20px;
+}
+
 /*--------- Footer ---------*/
 
 footer {
