--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,30 @@ main {
     margin-top: 20px;
 }
 
+/*--------- Funny Ball Page ---------*/
+
+.funny-ball-image {
+    margin-top: 40px;
+}
+
+#funny-ball-question-box {
+
+}
+
+.funny-ball-submit-button {
+    background-color: #3d0c11;
+    border-color: #3d0c11;
+    font-family: "lemon", "oswald", sans-serif;
+    color: #f9dec9;
+}
+
+#funny-ball-answer {
+    font-family: "lemon", "oswald", sans-serif;
+    color: #f9dec9;
+    text-align: center;
+    margin-top: 20px;
+}
+
 /*--------- Footer ---------*/
 
 footer {
